--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
      <script src="/js/phaser/2.11.0/phaser.min.js"></script>
 
      <!-- modules -->
+     <script src="/js/redspace/modules/background.js"></script>
      <script src="/js/redspace/modules/ship.js"></script>
 
      <!-- Phaser.Game -->
